--- a/BeOnTime-iOSApp/Base.lproj/Main.storyboard
+++ b/BeOnTime-iOSApp/Base.lproj/Main.storyboard
@@ -278,44 +278,45 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseEmployeeCell" rowHeight="141" id="nCV-4i-mFC" customClass="EmployeeTableViewCell" customModule="BeOnTime_iOSApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="320" height="141"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseEmployeeCell" rowHeight="118" id="nCV-4i-mFC" customClass="EmployeeTableViewCell" customModule="BeOnTime_iOSApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="118"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nCV-4i-mFC" id="8x7-X2-deD">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="140.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="117.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1U-sw-RvI">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1U-sw-RvI">
                                                     <rect key="frame" x="15" y="11" width="290" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vx9-Gi-koz">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vx9-Gi-koz">
                                                     <rect key="frame" x="15" y="40" width="290" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Address" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNa-gR-eiM">
-                                                    <rect key="frame" x="15" y="69" width="290" height="54"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGR-iH-tOw">
+                                                    <rect key="frame" x="15" y="76" width="290" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="Vx9-Gi-koz" firstAttribute="top" secondItem="a1U-sw-RvI" secondAttribute="bottom" constant="8" id="4dL-Fj-vef"/>
-                                                <constraint firstItem="Vx9-Gi-koz" firstAttribute="leading" secondItem="8x7-X2-deD" secondAttribute="leadingMargin" id="Qnp-u6-CLt"/>
-                                                <constraint firstItem="a1U-sw-RvI" firstAttribute="trailing" secondItem="8x7-X2-deD" secondAttribute="trailingMargin" id="Xo1-uC-TvP"/>
-                                                <constraint firstItem="a1U-sw-RvI" firstAttribute="leading" secondItem="8x7-X2-deD" secondAttribute="leadingMargin" id="dgE-l0-pYi"/>
-                                                <constraint firstItem="Vx9-Gi-koz" firstAttribute="top" secondItem="a1U-sw-RvI" secondAttribute="bottom" constant="8" id="ffU-Ne-ugK"/>
-                                                <constraint firstItem="a1U-sw-RvI" firstAttribute="top" secondItem="8x7-X2-deD" secondAttribute="topMargin" id="jse-n1-VJ1"/>
-                                                <constraint firstItem="pNa-gR-eiM" firstAttribute="top" secondItem="Vx9-Gi-koz" secondAttribute="bottom" constant="8" id="pKB-Mw-9vr"/>
-                                                <constraint firstItem="Vx9-Gi-koz" firstAttribute="trailing" secondItem="8x7-X2-deD" secondAttribute="trailingMargin" id="pf0-s6-Us2"/>
+                                                <constraint firstItem="a1U-sw-RvI" firstAttribute="top" secondItem="8x7-X2-deD" secondAttribute="topMargin" id="5ma-EB-0jR"/>
+                                                <constraint firstItem="Vx9-Gi-koz" firstAttribute="top" secondItem="a1U-sw-RvI" secondAttribute="bottom" constant="8" id="643-hz-8pu"/>
+                                                <constraint firstItem="a1U-sw-RvI" firstAttribute="trailing" secondItem="8x7-X2-deD" secondAttribute="trailingMargin" id="Gop-T3-xs2"/>
+                                                <constraint firstItem="Vx9-Gi-koz" firstAttribute="trailing" secondItem="8x7-X2-deD" secondAttribute="trailingMargin" id="Sth-47-Wud"/>
+                                                <constraint firstItem="a1U-sw-RvI" firstAttribute="leading" secondItem="8x7-X2-deD" secondAttribute="leadingMargin" id="ZPT-iX-qqq"/>
+                                                <constraint firstItem="Vx9-Gi-koz" firstAttribute="leading" secondItem="8x7-X2-deD" secondAttribute="leadingMargin" id="lzB-jl-M5j"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Vx9-Gi-koz" secondAttribute="bottom" constant="23" id="ubt-Jd-Ytp"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="lblAddress" destination="cGR-iH-tOw" id="aHG-ga-lac"/>
                                             <outlet property="lblEmail" destination="Vx9-Gi-koz" id="Eqx-jp-wlu"/>
                                             <outlet property="lblName" destination="a1U-sw-RvI" id="pFz-xb-tTd"/>
                                         </connections>
